fix(navbar): remove extra padding-right on dropdown trigger to prevent scrollbar

--- a/include/style/navbar.styl
+++ b/include/style/navbar.styl
@@ -68,6 +68,7 @@ $navbar-item-margin-h ?= 0
         display: flex
         align-items: center
         padding: $navbar-item-padding-v $navbar-item-padding-h
+        padding-right: $navbar-item-padding-h
         margin: $navbar-item-margin-v $navbar-item-margin-h
         &::after
             display: none
